# mechy-keyboard

./: README.md  build-updater-file.js  build.sh  get-soundpacks-info.js  index.html  package.json  pnpm-lock.yaml  release.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
manual/: index.cjs
soundpacks/: uncompress.sh
soundpacks/Creams/: config.json
soundpacks/cherrymx-black-abs/: config.json
soundpacks/cherrymx-black-pbt/: config.json
soundpacks/cherrymx-blue-abs/: config.json
soundpacks/cherrymx-blue-pbt/: config.json
soundpacks/cherrymx-brown-abs/: config.json
soundpacks/cherrymx-brown-pbt/: config.json
soundpacks/cherrymx-red-abs/: config.json
soundpacks/cherrymx-red-pbt/: config.json
soundpacks/eg-crystal-purple/: config.json
soundpacks/eg-oreo/: config.json
soundpacks/glorious-panda/: config.json
soundpacks/model-fxt/: config.json
soundpacks/topre-purple-hybrid-pbt/: config.json
soundpacks/unicompclassic/: config.json
src/: App.tsx  bindings.ts  const.tsx  context.tsx  fonts.css  index.css  init.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/keyboard_listener/: mod.rs
src-tauri/src/keypress/: mod.rs
src-tauri/src/plugins/mac_os/: mod.rs
src-tauri/src/plugins/mac_os/traffic_lights/: mod.rs
src-tauri/src/soundpacks/: mod.rs
src-tauri/src/system_tray/: mod.rs
src-tauri/src/utils/: mod.rs
src/assets/: CherryLogo.tsx  EverglideLogo.tsx  GloriousLogo.tsx  IBMLogo.tsx  NovelKeysLogo.tsx  TopreLogo.tsx  UnicompLogo.tsx  everglide-logo.avif
src/components/: button.tsx  layout.tsx  popover.tsx  separator.tsx  shortcut.tsx  volume-slider.tsx
src/integration/: general.ts  soundpacks.ts
src/pages/: home.tsx
src/pages/settings/: actions.tsx  credits.tsx  index.tsx  info.tsx  shortcuts.tsx  sidebar.tsx
src/sections/: Actions.tsx  Info.tsx  KeyboardSelector.tsx  MacosWarning.tsx  Main.tsx
src/stores/: shortcuts.ts  volume.ts
src/utils/: cn.ts  debounce-fn.tsx  keycodes.ts  keymaps.tsx  shortcut.ts
