[package]
name = "mechy-keyboard"
version = "0.1.0"
description = "Give your keyboard a voice. Simulate the sounds of typing on a mechanical keyboard."
authors = ["Julian Kominovic"]
license = ""
repository = "https://github.com/JulianKominovic/mechy-keyboard"
default-run = "mechy-keyboard"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "shell-open", "fs-create-dir", "fs-exists", "fs-write-file", "window-start-dragging", "macos-private-api", "fs-read-dir", "path-all"] }
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
strum = "0.25.0"
rdev = { git = "https://github.com/fufesou/rdev" }
once_cell = "1.19.0"
kira = "0.9.3"
rand = "0.8.5"
window-vibrancy = "0.4.3"
reqwest = "0.12.5"
zip-extract = "0.1.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.22"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"

[profile.dev.package.kira]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
